# riichi-hs

./: .gitignore  CHANGELOG.md  default.nix  flake.nix  riichi-hs.cabal  utils.nix  winning-shapes.txt
src/: Hand.hs  Tile.hs  Utils.hs
