cabal-version:      3.4
name:               riichi-hs
version:            0.1.0.0
synopsis:           A set of tools for Riichi Mahjong players
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Ramiro S. Garay
maintainer:         ramiro.sgaray@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common lang
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DerivingVia
        TypeFamilies
        BlockArguments
        LambdaCase
    build-depends:    , base >=4.18 && < 5

common warnings
    ghc-options: -Wall

library
    import:           warnings, lang
    exposed-modules:  Hand
                      Tile
                      Utils
    -- other-modules:
    build-depends:    , typedKanren >= 0.1 && < 0.2
                      , lens        >= 5.3 && < 5.4
    hs-source-dirs:   src

executable riichi-hs
    import:           warnings, lang
    main-is:          Main.hs
    -- other-modules:
    build-depends:
        base ^>=4.18.3.0,

    hs-source-dirs:   exe
